--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,6 +31,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  font-family: 'Gotham', sans-serif;
 }
 
 :root{
@@ -39,4 +41,9 @@
   --yellow: #FFB612;
   --red: #dc0a17;
   --green: #2FC022;
+}
+
+body {
+  height: 100vh;
+  width: 100vw;
 }
