--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,9 +38,12 @@
 :root{
   --dark-grey: #333333;
   --light-grey: #808080;
+  --lightest-grey: #f0f0f0;
   --yellow: #FFB612;
   --red: #dc0a17;
   --green: #2FC022;
+
+  --light-text: #9c9c9c;
 }
 
 body {
