--- a/src/app/components/forms/forms.component.html
+++ b/src/app/components/forms/forms.component.html
@@ -1,32 +1,34 @@
-<form action="" class="form-group">
+<form action="" class="form-group" [formGroup]="formGroup" >
   <div class="form-icon">
     <img ngSrc="./assets/imgs/png/icon-hour.png" height="30" width="30" alt="form-clock">
     Horários
   </div>
   <h2>Qual horário você quer treinar?</h2>
   <div class="radio-wrapper">
-    <input type="radio" name="hour-radio" value="morning">
-    <label for="morning">Manhã</label>
+    <input type="radio" name="hourRadio" value="morning" formControlName="hourRadio">
+    <label for="hourRadio">Manhã</label>
     <span>06:00 às 12h</span>
   </div>
   <div class="radio-wrapper">
-    <input type="radio" name="hour-radio" value="afternoon">
-    <label for="afternoon">Tarde</label>
+    <input type="radio" name="hourRadio" value="afternoon" formControlName="hourRadio">
+    <label for="hourRadio">Tarde</label>
     <span>12:01 às 18h</span>
   </div>
   <div class="radio-wrapper">
-    <input type="radio" name="hour-radio" value="evening">
-    <label for="evening">Noite</label>
+    <input type="radio" name="hourRadio" value="evening" formControlName="hourRadio">
+    <label for="hourRadio">Noite</label>
     <span>18:01 às 23h</span>
   </div>
   <div class="checkbox-wrapper">
-    <input type="checkbox" name="show-closed" />
-    <label for="show-closed">Exibir unidades fechadas</label>
+    <div class="checkbox">
+      <input type="checkbox" name="show-closed" formControlName="showClosed" />
+      <label for="show-closed">Exibir unidades fechadas</label>
+    </div>
     <span>Resultados encontrados: <b>{{ results.length }}</b></span>
   </div>
   <div class="button-wrapper">
-    <button type="button" class="btn btn-primary">Encontrar unidade</button>
-    <button type="button" class="btn btn-secondary">Limpar</button>
+    <button type="button" class="btn btn-primary" (click)="onSubmit()">Encontrar unidade</button>
+    <button type="button" class="btn btn-secondary" (click)="onFormReset()">Limpar</button>
   </div>
 
 </form>
