--- a/src/app/components/forms/forms.component.scss
+++ b/src/app/components/forms/forms.component.scss
@@ -66,19 +66,21 @@
     margin: 2rem 0;
     width: 100%;
 
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    gap: 0.75rem;
 
     label {
       padding: 0 0.5rem;
-    }
-    span {
-      position: absolute;
-      right: 0;
     }
   }
 
   .button-wrapper {
     display: flex;
+    flex-direction: column;
     gap: 0.75rem;
     align-items: center;
     justify-content: center;
@@ -96,7 +98,7 @@
 
       padding: 1rem;
 
-      width: 25%;
+      width: 100%;
 
       border: none;
 
