--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-header></app-header>
-<app-forms></app-forms>
+<div class="container">
+  <app-header></app-header>
+  <app-forms></app-forms>
+
+</div>
 <router-outlet></router-outlet>
