--- a/src/app/components/forms/forms.component.html
+++ b/src/app/components/forms/forms.component.html
@@ -24,7 +24,7 @@
       <input type="checkbox" name="show-closed" formControlName="showClosed" />
       <label for="show-closed">Exibir unidades fechadas</label>
     </div>
-    <span>Resultados encontrados: <b>{{ results.length }}</b></span>
+    <span>Resultados encontrados: <b>{{ filteredResults.length }}</b></span>
   </div>
   <div class="button-wrapper">
     <button type="button" class="btn btn-primary" (click)="onSubmit()">Encontrar unidade</button>
