--- a/src/app/components/labels/labels.component.html
+++ b/src/app/components/labels/labels.component.html
@@ -1,1 +1,66 @@
-<p>labels works!</p>
+<div class="label">
+  <div class="label-item">
+    <h3>
+      Máscara
+    </h3>
+    <div class="label-images">
+      <div class="label-image">
+        <img src="/assets/imgs/png/required-mask.png" />
+        <p>Obrigatório</p>
+      </div>
+      <div class="label-image">
+        <img src="/assets/imgs/png/recommended-mask.png" />
+        <p>Recomendado</p>
+      </div>
+    </div>
+  </div>
+  <div class="label-item">
+    <h3>
+      Toalha
+    </h3>
+    <div class="label-images">
+      <div class="label-image">
+        <img src="/assets/imgs/png/required-towel.png" />
+        <p>Obrigatório</p>
+      </div>
+      <div class="label-image">
+        <img src="/assets/imgs/png/recommended-towel.png" />
+        <p>Recomendado</p>
+      </div>
+    </div>
+  </div>
+  <div class="label-item">
+    <h3>
+      Bebedouro
+    </h3>
+    <div class="label-images">
+      <div class="label-image">
+        <img src="/assets/imgs/png/partial-fountain.png" />
+        <p>Parcial</p>
+      </div>
+      <div class="label-image">
+        <img src="/assets/imgs/png/not_allowed-fountain.png" />
+        <p>Proibido</p>
+      </div>
+    </div>
+  </div>
+  <div class="label-item">
+    <h3>
+      Vestiários
+    </h3>
+    <div class="label-images">
+      <div class="label-image">
+        <img src="/assets/imgs/png/allowed-lockerroom.png" />
+        <p>Liberado</p>
+      </div>
+      <div class="label-image">
+        <img src="/assets/imgs/png/partial-lockerroom.png" />
+        <p>Parcial</p>
+      </div>
+      <div class="label-image">
+        <img src="/assets/imgs/png/closed-lockerroom.png" />
+        <p>Proibido</p>
+      </div>
+    </div>
+  </div>
+</div>
