ft: adding footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
   @if (showList | async) {
     <app-cards-list [unitsList]="unitList"></app-cards-list>
   }
+  <app-footer></app-footer>
 
 </div>
 <router-outlet></router-outlet>
