--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'ngx-toastr/toastr';
+
 @font-face {
   font-family: Gotham;
   src: url('assets/fonts/Gotham/gotham-light.woff2') format('truetype');
@@ -54,3 +56,8 @@ body {
   height: 100%;
   width: 100%;
 }
+
+.ngx-toastr {
+  width: 350px !important;  // Specify toastr-dialog width for all devices
+}
+
